--- a/src/Components/Menu/style.css
+++ b/src/Components/Menu/style.css
@@ -18,12 +18,12 @@ img {
   grid-template-columns: repeat(4, 130px);
 }
 
-.wrapper-details-img {
+.wrapper-details-inst {
   width: 600px;
   display: grid;
   grid-gap: 45px;
   grid-template-columns: repeat(2, 150px);
-  padding-left: 150px;
+  padding-left: 130px;
 }
 
 .wrapper-details-input {
