--- a/src/Components/Timer/timer.css
+++ b/src/Components/Timer/timer.css
@@ -1,17 +1,17 @@
 .app {
   text-align: center;
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 200px;
+  width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .time {
-  font-size: 3rem;
+  font-size: 30px;
   padding: 2rem;
 }
 
@@ -21,7 +21,7 @@
   border-radius: 3px;
   text-transform: uppercase;
   font-weight: 600;
-  font-size: 0.8rem;
+  font-size: 10px;
   border-style: groove;
 }
 
@@ -30,7 +30,6 @@
 }
 
 .button-primary:hover {
-  background-color: #2641d4;
   border: 1px solid #1b1f2b;
 }
 
