--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,7 @@
   text-align: center;
   align-content: center;
 }
-.body {
-  /* background-color: rgb(39, 36, 36); */
-  /* padding-left: 10px;
-  border-left: 2px solid black;
-  border-right: 2px solid black;
-  height: 1000px; */
-}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -24,6 +18,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.Navbar {
+  border-bottom: #282c34 solid 5px;
+  width: 700px;
 }
 
 .App-link {
