--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,16 @@
 body {
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  align-content: center;
-
-  border-left: 10px solid rgba(255, 255, 255, 0.699);
-  border-right: 10px solid rgba(255, 255, 255, 0.699);
-
-  /* background-color: rgb(12, 11, 11); */
-
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.body {
+  padding-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  align-content: center;
 }
 
 code {
