--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,20 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.body {
+/* .body {
   padding-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
   width: 60%;
   align-content: center;
-}
+} */
 
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
