--- a/src/Components/BrewingModal/Modal.css
+++ b/src/Components/BrewingModal/Modal.css
@@ -1,6 +1,5 @@
 .modal {
   font-size: 13px;
-  /* background-color: rgba(179, 178, 178, 0.815); */
   border: 2px solid rgb(223, 223, 223);
 }
 .modal > .header {
@@ -63,4 +62,9 @@
   display: grid;
   grid-gap: 130px;
   grid-template-columns: repeat(3, 150px);
+}
+
+.grid-padding {
+  padding-bottom: 30px;
+  padding-top: 35px;
 }
